Back Face Culling not working with added objects #34290

Closed
opened 2013-02-17 15:21:17 +01:00 by Bao 2 · 10 comments

%%%--- Operating System, Graphics card ---
Blender trunk 54608, linuxmint14 (ubuntu12.10) 64bits

- Short description of error ---

A created object and a added object from another file have different behaviour with back face culling when the
viewport is in texture shading mode (In solid mode there is no bug)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the file and you see: Blender Internal renderer is selected, Backface Culling in the N panel checked, and the Viewport is using Texture as the mode of display. In the 3DView there are two objects named: "NewObject" and "AddedObject".

"NewObject" was created from scratch just to explain this bug.
"AddedObject" has been added from a former blender file created with a blender revision from 15 days ago, I don't remember the exact revision number.

The bug: Rotate the viewport to see the back of the two objects: Only one does the back face culling (NewObject). The AddedObject is wrong and doesn't obey backface culling.

I use these reference planes to modeling (several of them around the model) and if it doesn't obey backfaceculling they occlude my viewing of the model and then I have to go to the outliner to check/uncheck the visibility of these planes. I can create the planes again if it is not a bug, but perhaps some variable in the added object is not correctly set or something and perhaps you want to know about was my thinking. Also it would avoid me to recreate the near 40 reference planes I use normally!!!

A second bug?: Change the renderer to Cycles and we don't see any texture on the objects (and we have the viewport in Texture shading mode yet). Perhaps this is not coded yet when using Cycles and not a second bug. It would be great to show the texture when Cycles is selected too, avoiding switching to Blender Internal to modeling and back to Cycles, to render, continuously.

%%%

%%%--- Operating System, Graphics card --- Blender trunk 54608, linuxmint14 (ubuntu12.10) 64bits - Short description of error --- A created object and a added object from another file have different behaviour with back face culling when the viewport is in texture shading mode (In solid mode there is no bug) - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the file and you see: Blender Internal renderer is selected, Backface Culling in the N panel checked, and the Viewport is using Texture as the mode of display. In the 3DView there are two objects named: "NewObject" and "AddedObject". "NewObject" was created from scratch just to explain this bug. "AddedObject" has been added from a former blender file created with a blender revision from 15 days ago, I don't remember the exact revision number. The bug: Rotate the viewport to see the back of the two objects: Only one does the back face culling (NewObject). The AddedObject is wrong and doesn't obey backface culling. I use these reference planes to modeling (several of them around the model) and if it doesn't obey backfaceculling they occlude my viewing of the model and then I have to go to the outliner to check/uncheck the visibility of these planes. I can create the planes again if it is not a bug, but perhaps some variable in the added object is not correctly set or something and perhaps you want to know about was my thinking. Also it would avoid me to recreate the near 40 reference planes I use normally!!! A second bug?: Change the renderer to Cycles and we don't see any texture on the objects (and we have the viewport in Texture shading mode yet). Perhaps this is not coded yet when using Cycles and not a second bug. It would be great to show the texture when Cycles is selected too, avoiding switching to Blender Internal to modeling and back to Cycles, to render, continuously. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Regarding Cycles, that's not a bug, it uses a different way to assign textures to faces. There is no more distinction there between the render and viewport textures, it's all specified in the material.%%%

%%%Regarding Cycles, that's not a bug, it uses a different way to assign textures to faces. There is no more distinction there between the render and viewport textures, it's all specified in the material.%%%

%%%Meanwhile, removing material from AddedObject may help you, Bao2.%%%

%%%Meanwhile, removing material from AddedObject may help you, Bao2.%%%

%%%The problem is that material have their own backface culling setting for the game engine, which you can only see when you switch to Blender Game. The interaction here was not working entirely well, I've now made the setting in the 3D view override any material settings so that culling happens for all materials.%%%

%%%The problem is that material have their own backface culling setting for the game engine, which you can only see when you switch to Blender Game. The interaction here was not working entirely well, I've now made the setting in the 3D view override any material settings so that culling happens for all materials.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Hi, Brecht.

I was looking for a solution to my problem and found this report. So I think the key to my problem may be here.

Just compare the behavior of the 'Backface Culling' checkbox in Properties Shelf in the 'Texture' vewport's mode on a new scene at 2.65 and at 2.67. In 2.67 this option has no effect. Culling always happen in 'Texture' mode (and in 'Solid' mode with 'Textured Solid' enabled).

Here simple example: http://www.pasteall.org/blend/22005 Open this file in 2.65 and in 2.67 and you can see difference.%%%

%%%Hi, Brecht. I was looking for a solution to my problem and found this report. So I think the key to my problem may be here. Just compare the behavior of the 'Backface Culling' checkbox in Properties Shelf in the 'Texture' vewport's mode on a new scene at 2.65 and at 2.67. In 2.67 this option has no effect. Culling always happen in 'Texture' mode (and in 'Solid' mode with 'Textured Solid' enabled). Here simple example: http://www.pasteall.org/blend/22005 Open this file in 2.65 and in 2.67 and you can see difference.%%%

%%%It's intended to be different, 2.67 changed the behavior to what it was before the 3d viewport option was introduced. If you want to disable backface culling in textured draw mode you need to edit the material in Blender Game mode. There are two options here that influence the drawing behavior, one has to have priority.%%%

%%%It's intended to be different, 2.67 changed the behavior to what it was before the 3d viewport option was introduced. If you want to disable backface culling in textured draw mode you need to edit the material in Blender Game mode. There are two options here that influence the drawing behavior, one has to have priority.%%%

%%%But object in my example has no attached material at all. There is some hidden material?%%%

%%%But object in my example has no attached material at all. There is some hidden material?%%%

%%%If there is no material, the object will use a default material and that has backface culling enabled.%%%

%%%If there is no material, the object will use a default material and that has backface culling enabled.%%%

%%%Ok. Thanks for the explanation.
But I think that it is very not obvious for the users that they need to create a material and go to disable the option in the game engine in such a case. In 2.65 it was more predictable behavior.%%%

%%%Ok. Thanks for the explanation. But I think that it is very not obvious for the users that they need to create a material and go to disable the option in the game engine in such a case. In 2.65 it was more predictable behavior.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34290
No description provided.