Fix #34290: backface culling option in 3d view was not interacting well with the option in the material in texture draw mode, now it always overrides the material.